--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,19 +11,33 @@ android {
         versionCode 10
         versionName "1.0.9"
     }
+
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            resValue "string", "google_maps_key", "AIzaSyBBtJ1EkaCk2vG1a3NfDZi69vxKEUQbyEA"
+            resValue "string", "server_url", "https://nuumstest.herokuapp.com"
+            resValue "string", "isDebug", "0"
+            resValue "string", "isDEBUGREPORT", "1"
+
+        }
+        debug {
+            // 개발용 KEY
+            resValue "string", "google_maps_key", "AIzaSyAhfYsnE8mYnA3szlf07f_-n9hlgCv-CVA"
+            resValue "string", "server_url", "https://nuumstest.herokuapp.com"
+            resValue "string", "isDebug", "1"
+            resValue "string", "isDEBUGREPORT", "0"
         }
     }
 }
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'com.android.support:design:23.4.0'
     compile 'com.google.code.gson:gson:2.7'
     compile 'com.google.android.gms:play-services:6.1.71'
+    compile 'com.android.support:multidex:1.0.0'
+    compile 'com.sromku:simple-fb:4.0.6'
 }
